--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,4 +69,62 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/transacaoBT" />
 
+    <TextView
+        android:id="@+id/creditoTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="20dp"
+        android:text="Crédito: "
+        android:textAlignment="viewStart"
+        android:textColor="@android:color/background_light"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/fundoIV"
+        app:layout_constraintTop_toBottomOf="@+id/dataTV" />
+
+    <TextView
+        android:id="@+id/vlrCreditoTV"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
+        android:text="0.0"
+        android:textAlignment="textEnd"
+        android:textColor="@android:color/background_light"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/creditoTV"
+        app:layout_constraintEnd_toEndOf="@+id/fundoIV"
+        app:layout_constraintStart_toEndOf="@+id/creditoTV"
+        app:layout_constraintTop_toTopOf="@+id/creditoTV" />
+
+    <TextView
+        android:id="@+id/debitoTV"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="20dp"
+        android:text="Débito:"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/creditoTV"
+        app:layout_constraintStart_toStartOf="@+id/fundoIV"
+        app:layout_constraintTop_toBottomOf="@+id/creditoTV" />
+
+    <TextView
+        android:id="@+id/vlrDebitoTV"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
+        android:text="0.0"
+        android:textAlignment="textEnd"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/debitoTV"
+        app:layout_constraintEnd_toEndOf="@+id/fundoIV"
+        app:layout_constraintStart_toEndOf="@+id/debitoTV"
+        app:layout_constraintTop_toTopOf="@+id/debitoTV" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
