--- a/app/src/main/res/layout/activity_cadastroconta.xml
+++ b/app/src/main/res/layout/activity_cadastroconta.xml
@@ -25,6 +25,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:hint="Informe a descrição da conta."
         android:inputType="textPersonName"
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,19 +46,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/descContaET" />
 
-    <EditText
-        android:id="@+id/saldoContaEV"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:textAlignment="viewStart"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/saldoContaTV" />
-
     <Button
         android:id="@+id/contaSalvarBT"
         android:layout_width="0dp"
@@ -70,4 +58,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/saldoContaEV" />
+
+    <EditText
+        android:id="@+id/saldoContaEV"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Informe o saldo inicial da conta."
+        android:inputType="numberDecimal"
+        android:textAlignment="viewEnd"
+        android:textColor="@color/colorPrimaryDark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/saldoContaTV" />
 </androidx.constraintlayout.widget.ConstraintLayout>
