--- a/app/src/main/res/layout/activity_listaconta.xml
+++ b/app/src/main/res/layout/activity_listaconta.xml
@@ -11,13 +11,13 @@
 
         <TextView
             android:id="@+id/visualizaContaTV"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="30sp" />
 
         <TextView
             android:id="@+id/saldoContaTV"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="30sp"/>
 
