--- a/app/src/main/res/layout/activity_conta.xml
+++ b/app/src/main/res/layout/activity_conta.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ConstraintLayoutConta"
+    android:id="@+id/linearLayoutConta"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".view.ListaContaActivity">
 
     <Button
@@ -21,6 +21,9 @@
         android:id="@+id/listaContaRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="10dp" />
+        app:layout_behavior="@string/app_name">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
 
 </LinearLayout>
