--- a/app/src/main/res/layout/activity_listaconta.xml
+++ b/app/src/main/res/layout/activity_listaconta.xml
@@ -1,26 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/visualizaContaTV"
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="30sp" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/saldoContaTV"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="30sp"/>
+            <TextView
+                android:id="@+id/visualizaContaTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Conta"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
+            <TextView
+                android:id="@+id/saldoContaTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Saldo"
+                android:numeric="decimal"
+                android:textSize="14sp" />
+
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
